# k8senv

./: README.md  requirements-pkg.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml
k8senv/: __init__.py  __main__.py
tests/: test_ctx.py  test_init.py  test_ls.py  test_run.py
