[metadata]
name = k8senv
version = 0.0.1
description = Tools for managing multiple kubernetes clusters
long_description = file: README.md
url = https://github.com/wildfish/k8senv
author = Wildfish
author_email = developers@wildfish.com
license = BSD-3-Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[tool:pytest]
testpaths =
    tests
    k8senv
addopts = --black --isort --mypy --cov=k8senv --cov-report=term-missing --cov-report=html
DJANGO_SETTINGS_MODULE = tests.settings
django_find_project = false
pythonpath = . src

[flake8]
max-line-length = 88
ignore = E123,E128,E203,E501,W503

[isort]
multi_line_output = 3
line_length = 88
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2
skip = .git,migrations

[coverage:run]
omit =
    k8senv/__main__.py

[mypy]
ignore_missing_imports = True
